Added WordPress 4.4 support

--- a/administrator/language/en-GB/en-GB.plg_j2xml_wordpress.sys.ini
+++ b/administrator/language/en-GB/en-GB.plg_j2xml_wordpress.sys.ini
@@ -1,7 +1,7 @@
-; J2XML Wordpress Importer 3.1.4
-; Copyright (C) 2010-2013 Helios Ciancio. All rights reserved.
+; J2XML Wordpress Importer 3.3.21
+; Copyright (C) 2010, 2016 Helios Ciancio. All rights reserved.
 ; License GNU General Public License version 3 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8
 
-PLG_J2XML_WORDPRESS="J2XML Wordpress Importer"
+PLG_J2XML_WORDPRESS="Wordpress Importer for J2XML"
 PLG_J2XML_WORDPRESS_XML_DESCRIPTION="Allows J2XML to import data from Wordpress. Requires J2XML Library 13.8.220 or above."
