--- a/plugins/j2xml/wordpress/CHANGELOG
+++ b/plugins/j2xml/wordpress/CHANGELOG
@@ -1,4 +1,12 @@
------------------------- 3.7.29 Release [20-July-2017] ------------------------
+----------------------- 4.4.30 Release  [6-August-2018] -----------------------
+
+6-August-2018
+  + base (build 30)
+  + canonical (build 30)
+
+13-February-2018
+  # plugin name
+  # js
 
 20-July-2017
   + js (build 29)
