--- a/administrator/language/en-GB/en-GB.plg_j2xml_wordpress.ini
+++ b/administrator/language/en-GB/en-GB.plg_j2xml_wordpress.ini
@@ -1,11 +1,11 @@
-; Wordpress Importer for J2XML - plg_j2xxml_wordpress 3.7.29
-; Copyright (C) 2014, 2017 Helios Ciancio. All rights reserved.
+; J2XML - WordPress Importer - plg_j2xxml_wordpress 3.7.29
+; Copyright (C) 2014, 2018 Helios Ciancio. All rights reserved.
 ; License GNU General Public License version 3 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8
 
-PLG_J2XML_WORDPRESS="Wordpress Importer for J2XML"
-PLG_J2XML_WORDPRESS_XML_DESCRIPTION="Allows J2XML to import data from Wordpress. Requires J2XML 3.7.173 or above."
-PLG_J2XML_WORDPRESS_MSG_REQUIREMENTS_LIB="requires Requires J2XML 3.7.173 or above."
+PLG_J2XML_WORDPRESS="J2XML - WordPress Importer"
+PLG_J2XML_WORDPRESS_XML_DESCRIPTION="Allows J2XML to import data from WordPress. Requires J2XML 3.7.181 or above."
+PLG_J2XML_WORDPRESS_MSG_REQUIREMENTS_LIB="requires Requires J2XML 3.7.181 or above."
 PLG_J2XML_WORDPRESS_MSG_REQUIREMENTS_XSL="requires the xsl extension for php in order to work properly. For more Information, please visit the official PHP website at the page <a href='http://php.net/manual/en/book.xsl.php'>XSL - Manual</a>"
 
 PLG_J2XML_WORDPRESS_DEBUG_SYSTEM_LABEL="Debug"
