--- a/administrator/language/it-IT/it-IT.plg_j2xml_wordpress.ini
+++ b/administrator/language/it-IT/it-IT.plg_j2xml_wordpress.ini
@@ -1,11 +1,11 @@
-; Wordpress Importer for J2XML - plg_j2xxml_wordpress 3.7.29
-; Copyright (C) 2014, 2017 Helios Ciancio. All rights reserved.
+; J2XML - WordPress Importer - plg_j2xxml_wordpress 3.7.29
+; Copyright (C) 2014, 2018 Helios Ciancio. All rights reserved.
 ; License GNU General Public License version 3 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8
 
-PLG_J2XML_WORDPRESS="Wordpress Importer for J2XML"
-PLG_J2XML_WORDPRESS_XML_DESCRIPTION="Abilita J2XML ad importare i dati da Wordpress. Richiesto J2XML 3.7.173 o superiore."
-PLG_J2XML_WORDPRESS_MSG_REQUIREMENTS_LIB="richiede J2XML 3.7.173 o superiore."
+PLG_J2XML_WORDPRESS="J2XML - WordPress Importer"
+PLG_J2XML_WORDPRESS_XML_DESCRIPTION="Abilita J2XML ad importare i dati da Wordpress. Richiesto J2XML 3.7.181 o superiore."
+PLG_J2XML_WORDPRESS_MSG_REQUIREMENTS_LIB="richiede J2XML 3.7.181 o superiore."
 PLG_J2XML_WORDPRESS_MSG_REQUIREMENTS_XSL="richiede l'estensione xsl per php per funzionare. Per informazioni aggiuntive visita la pagina <a href='http://php.net/manual/en/book.xsl.php'>XSL - Manual</a> sul sito ufficiale del progetto PHP."
 
 PLG_J2XML_WORDPRESS_DEBUG_SYSTEM_LABEL="Debug"
