--- a/administrator/language/it-IT/it-IT.plg_j2xml_wordpress.sys.ini
+++ b/administrator/language/it-IT/it-IT.plg_j2xml_wordpress.sys.ini
@@ -1,7 +1,7 @@
-; Wordpress Importer for J2XML - plg_j2xxml_wordpress 3.7.29
-; Copyright (C) 2014, 2017 Helios Ciancio. All rights reserved.
+; J2XML - WordPress Importer - plg_j2xxml_wordpress 3.7.29
+; Copyright (C) 2014, 2018 Helios Ciancio. All rights reserved.
 ; License GNU General Public License version 3 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8
 
-PLG_J2XML_WORDPRESS="Wordpress Importer for J2XML"
-PLG_J2XML_WORDPRESS_XML_DESCRIPTION="Abilita J2XML ad importare i dati da Wordpress. Richiesto J2XML 3.7.173 o superiore."
+PLG_J2XML_WORDPRESS="J2XML - WordPress Importer"
+PLG_J2XML_WORDPRESS_XML_DESCRIPTION="Abilita J2XML ad importare i dati da Wordpress. Richiesto J2XML 3.7.181 o superiore."
