--- a/administrator/language/en-GB/en-GB.plg_j2xml_wordpress.ini
+++ b/administrator/language/en-GB/en-GB.plg_j2xml_wordpress.ini
@@ -1,6 +1,6 @@
-; J2XML - WordPress Importer - plg_j2xxml_wordpress 3.7.29
-; Copyright (C) 2014, 2018 Helios Ciancio. All rights reserved.
-; License GNU General Public License version 3 or later; see LICENSE.txt, see LICENSE.php
+; Joomla.Plugins.J2xml.Wordpress __DEPLOY_VERSION__
+; Copyright (C) 2014 - 2022 Helios Ciancio <info (at) eshiol (dot) it> (https://www.eshiol.it). All Rights Reserved.
+; License GNU General Public License version 3 or later; see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8
 
 PLG_J2XML_WORDPRESS="J2XML - WordPress Importer"
@@ -12,8 +12,6 @@ PLG_J2XML_WORDPRESS_DEBUG_SYSTEM_LABEL="Debug"
 PLG_J2XML_WORDPRESS_DEBUG_SYSTEM_DESC="If enabled, diagnostic information will be saved."
 PLG_J2XML_WORDPRESS_DEBUG_FILENAME_LABEL="Filename"
 PLG_J2XML_WORDPRESS_DEBUG_FILENAME_DESC="The name of the file that stores current log messages."
-PLG_J2XML_WORDPRESS_DEBUG_PHPCONSOLE_DESC=""
-PLG_J2XML_WORDPRESS_DEBUG_PHPCONSOLE_LABEL="PHP Console"
 
 PLG_J2XML_WORDPRESS_READMORE_DESC="Enables the <em>Read more..</em> link into articles replacing the tag &amp;lt;!--more--&amp;gt;."
 PLG_J2XML_WORDPRESS_READMORE_LABEL="Read More"
