--- a/administrator/language/it-IT/it-IT.plg_j2xml_wordpress.sys.ini
+++ b/administrator/language/it-IT/it-IT.plg_j2xml_wordpress.sys.ini
@@ -1,6 +1,6 @@
-; J2XML - WordPress Importer - plg_j2xxml_wordpress 3.7.29
-; Copyright (C) 2014, 2018 Helios Ciancio. All rights reserved.
-; License GNU General Public License version 3 or later; see LICENSE.txt, see LICENSE.php
+; Joomla.Plugins.J2xml.Wordpress __DEPLOY_VERSION__
+; Copyright (C) 2014 - 2022 Helios Ciancio <info (at) eshiol (dot) it> (https://www.eshiol.it). All Rights Reserved.
+; License GNU General Public License version 3 or later; see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8
 
 PLG_J2XML_WORDPRESS="J2XML - WordPress Importer"
