--- a/plugins/j2xml/wordpress/CHANGELOG
+++ b/plugins/j2xml/wordpress/CHANGELOG
@@ -1,3 +1,9 @@
+------------------------ 4.4.33 Release  [25-May-2023] ------------------------
+
+25-May-2023
+  + J2XML 4 compatibility (build 33)
+
+
 ---------------------- 4.4.32 Release  [7-November-2019] ----------------------
 
 7-November-2019
